fix deprecation warning in CalendarExampleSimple